# sokoban-chess

./: .gitignore  .rustfmt.toml  Cargo.toml  run-release.sh  run.sh
assets/shaders/: .clang-format  default_frag.frag  default_vert.vert  imgui_vert.vert
assets/textures/: background.json
bit-bots-derive/: Cargo.toml
bit-bots-derive/src/: lib.rs
dev/: config.yaml
dev/imgui/: imgui_ini.ini  meta_data.yaml
src/: action_map.rs  clockwork.rs  components.rs  components_singleton.rs  ecs.rs  entities.rs  hardware_interfaces.rs  main.rs  resources.rs  scene.rs  scene_graph.rs  serialization.rs  systems.rs  tick_structs.rs  utilities.rs
src/components/: component.rs  component_serialization.rs  component_utils.rs  conversant_npc.rs  draw_rectangle.rs  follow.rs  graph_node.rs  grid_object.rs  name.rs  physics_components.rs  player.rs  prefab_marker.rs  scene_switcher.rs  serialization_data.rs  serialization_marker.rs  serialized_data.rs  sound_source.rs  sprite.rs  text_source.rs  tilemap.rs  transform.rs  tween_components.rs  velocity.rs
src/components_singleton/: camera.rs  markers.rs  player.rs  rendering_utility.rs  singleton_component.rs  singleton_database.rs
src/entities/: generational_index.rs  generational_index_array.rs  generational_index_value.rs
src/hardware_interfaces/: hardware_interface.rs  input.rs  renderer.rs  sound_player.rs  window.rs
src/resources/: fonts.rs  game_config.rs  prefab.rs  resources_database.rs  scene_name.rs  sound_resource.rs  sprite_resources.rs  tile_resources.rs
src/serialization/: fragmented_data.rs  serialization_util.rs  serialized_entity.rs  update_serialization.rs
src/systems/: conversant_npc_system.rs  cross_cutting_system.rs  follow_system.rs  grid_system.rs  imgui_system.rs  input_system.rs  physics_system.rs  player_system.rs  prefab_system.rs  renderer_system.rs  scene_system.rs  singleton_systems.rs  sound_system.rs  sprite_system.rs  tilemap_system.rs
src/tick_structs/: imgui.rs  (+3 more)
(+109 files in other folders)
